exports[`Snapshots ColabTool default 1`] = `
<div>
  ColabTool
</div>
`;

exports[`Snapshots ImagePost default 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <span
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </span>
          <div>
            <img
              alt="Image"
              className="rounded"
              src="https://cdn-images-1.medium.com/max/2000/1*1Kua7bNJfvLlTxWqgxVKfw.jpeg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": "20em",
                  "maxWidth": undefined,
                  "minHeight": "10em",
                  "minWidth": undefined,
                  "objectFit": "cover",
                  "width": "15em",
                }
              } />
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-image" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots ImagePost retweet 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="retweet-profile-wrapper">
          <div
            className="retweet-panel-container">
            <img
              alt="Image"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
              style={
                Object {
                  "height": "2em",
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "2em",
                }
              } />
            <div
              className="retweet-handle-container">
              <span
                className="text small">
                Joel Gascoigne
              </span>
              <span
                className="text extraSmall">
                @joelgascoigne
              </span>
            </div>
          </div>
        </div>
        <div
          className="post-content">
          <span
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </span>
          <div>
            <img
              alt="Image"
              className="rounded"
              src="https://cdn-images-1.medium.com/max/2000/1*1Kua7bNJfvLlTxWqgxVKfw.jpeg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": "20em",
                  "maxWidth": undefined,
                  "minHeight": "10em",
                  "minWidth": undefined,
                  "objectFit": "cover",
                  "width": "15em",
                }
              } />
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-retweet" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots ImagePost square image 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <span
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </span>
          <div>
            <img
              alt="Image"
              className="rounded"
              src="http://lorempixel.com/400/400/cats/"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": "20em",
                  "maxWidth": undefined,
                  "minHeight": "10em",
                  "minWidth": undefined,
                  "objectFit": "cover",
                  "width": "15em",
                }
              } />
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-image" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots ImagePost tall image 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <span
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </span>
          <div>
            <img
              alt="Image"
              className="rounded"
              src="http://lorempixel.com/400/900/cats/"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": "20em",
                  "maxWidth": undefined,
                  "minHeight": "10em",
                  "minWidth": undefined,
                  "objectFit": "cover",
                  "width": "15em",
                }
              } />
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-image" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots ImagePost wide image 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <span
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </span>
          <div>
            <img
              alt="Image"
              className="rounded"
              src="http://lorempixel.com/900/400/cats/"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": "20em",
                  "maxWidth": undefined,
                  "minHeight": "10em",
                  "minWidth": undefined,
                  "objectFit": "cover",
                  "width": "15em",
                }
              } />
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-image" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots LinkPost default 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <div
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </div>
          <div>
            <a
              className="link unstyled"
              href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
              <div
                className="card no-padding"
                onMouseEnter={undefined}
                onMouseLeave={undefined}>
                <div
                  className="link-attachment-content">
                  <img
                    alt="Image"
                    className="rounded"
                    src="https://cdn-images-1.medium.com/max/2000/1*1Kua7bNJfvLlTxWqgxVKfw.jpeg"
                    style={
                      Object {
                        "height": "10em",
                        "maxHeight": undefined,
                        "maxWidth": "15em",
                        "minHeight": undefined,
                        "minWidth": "15em",
                        "objectFit": "cover",
                        "width": "15em",
                      }
                    } />
                  <div
                    className="link-attachment-text">
                    <div>
                      <span
                        className="text">
                        What is a Product Designer?
                      </span>
                    </div>
                    <div
                      className="link-url">
                      <span
                        className="text small gray">
                        https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x
                      </span>
                    </div>
                    <div>
                      <span
                        className="text small">
                        A brief history at how history and markets influence design titles
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots LinkPost square image 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <div
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </div>
          <div>
            <a
              className="link unstyled"
              href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
              <div
                className="card no-padding"
                onMouseEnter={undefined}
                onMouseLeave={undefined}>
                <div
                  className="link-attachment-content">
                  <img
                    alt="Image"
                    className="rounded"
                    src="http://lorempixel.com/400/400/cats/"
                    style={
                      Object {
                        "height": "10em",
                        "maxHeight": undefined,
                        "maxWidth": "15em",
                        "minHeight": undefined,
                        "minWidth": "15em",
                        "objectFit": "cover",
                        "width": "15em",
                      }
                    } />
                  <div
                    className="link-attachment-text">
                    <div>
                      <span
                        className="text">
                        What is a Product Designer?
                      </span>
                    </div>
                    <div
                      className="link-url">
                      <span
                        className="text small gray">
                        https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x
                      </span>
                    </div>
                    <div>
                      <span
                        className="text small">
                        A brief history at how history and markets influence design titles
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots LinkPost tall image 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <div
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </div>
          <div>
            <a
              className="link unstyled"
              href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
              <div
                className="card no-padding"
                onMouseEnter={undefined}
                onMouseLeave={undefined}>
                <div
                  className="link-attachment-content">
                  <img
                    alt="Image"
                    className="rounded"
                    src="http://lorempixel.com/400/900/cats/"
                    style={
                      Object {
                        "height": "10em",
                        "maxHeight": undefined,
                        "maxWidth": "15em",
                        "minHeight": undefined,
                        "minWidth": "15em",
                        "objectFit": "cover",
                        "width": "15em",
                      }
                    } />
                  <div
                    className="link-attachment-text">
                    <div>
                      <span
                        className="text">
                        What is a Product Designer?
                      </span>
                    </div>
                    <div
                      className="link-url">
                      <span
                        className="text small gray">
                        https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x
                      </span>
                    </div>
                    <div>
                      <span
                        className="text small">
                        A brief history at how history and markets influence design titles
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots LinkPost wide image 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="post-content">
          <div
            className="post-content-text">
            <span
              className="text">
              What is a Product Designer? An awesome story by @jgadapee over on Medium! 
              <a
                className="link"
                href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
                http://buff.ly/1LTbUqv
              </a>
            </span>
          </div>
          <div>
            <a
              className="link unstyled"
              href="https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x">
              <div
                className="card no-padding"
                onMouseEnter={undefined}
                onMouseLeave={undefined}>
                <div
                  className="link-attachment-content">
                  <img
                    alt="Image"
                    className="rounded"
                    src="http://lorempixel.com/900/400/cats/"
                    style={
                      Object {
                        "height": "10em",
                        "maxHeight": undefined,
                        "maxWidth": "15em",
                        "minHeight": undefined,
                        "minWidth": "15em",
                        "objectFit": "cover",
                        "width": "15em",
                      }
                    } />
                  <div
                    className="link-attachment-text">
                    <div>
                      <span
                        className="text">
                        What is a Product Designer?
                      </span>
                    </div>
                    <div
                      className="link-url">
                      <span
                        className="text small gray">
                        https://austinstartups.com/what-is-a-product-designer-who-cares-eb38fc7afa7b#.i3r34a75x
                      </span>
                    </div>
                    <div>
                      <span
                        className="text small">
                        A brief history at how history and markets influence design titles
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots Post default 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots Post isConfirmingDelete 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className="post-confirming-delete">
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Confirm
                    </span>
                  </span>
                </button>
              </span>
              <span
                className="post-cancel-delete">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className="text small">
                    Cancel
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={true}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots Post isDeleting 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card faded no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <span
            className="text small">
             Deleting... 
          </span>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={true}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots Post isWorking 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={true}
      onClick={[Function]}>
      Requesting Approval ...
    </button>
  </div>
</div>
`;

exports[`Snapshots Post isWorkingManager 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={true}
      onClick={[Function]}>
      Approving ...
    </button>
  </div>
</div>
`;

exports[`Snapshots Post manager 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Approve
    </button>
  </div>
</div>
`;

exports[`Snapshots Post postType:image 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-image" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots Post postType:link 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-link" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots Post retweet 1`] = `
<div
  className="post-container">
  <div
    className="post">
    <div
      className="card no-padding"
      onMouseEnter={undefined}
      onMouseLeave={undefined}>
      <div
        className="post-content">
        <div
          className="retweet-profile-wrapper">
          <div
            className="retweet-panel-container">
            <img
              alt="Image"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
              style={
                Object {
                  "height": "2em",
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "2em",
                }
              } />
            <div
              className="retweet-handle-container">
              <span
                className="text small">
                Joel Gascoigne
              </span>
              <span
                className="text extraSmall">
                @joelgascoigne
              </span>
            </div>
          </div>
        </div>
        <span
          className="text">
          I am a text-only test post.
        </span>
      </div>
      <div
        className="post-details">
        <div
          className="post-controls">
          <div>
            <span>
              <span
                className="post-button">
                <button
                  className="no-style"
                  disabled={undefined}
                  onClick={[Function]}>
                  <span
                    className={undefined}>
                    <span
                      className="post-icon">
                      <i
                        className="icon small undefined bi bi-x" />
                    </span>
                    <span
                      className="text small">
                      Delete Post
                    </span>
                  </span>
                </button>
              </span>
            </span>
            <span
              className="post-button-last">
              <button
                className="no-style"
                disabled={undefined}
                onClick={[Function]}>
                <span
                  className="post-icon">
                  <i
                    className="icon small undefined bi bi-edit" />
                </span>
                <span
                  className="text small">
                  Edit Post
                </span>
              </button>
            </span>
          </div>
        </div>
        <div
          className="post-author">
          <span
            className="post-details-author-image">
            <img
              alt="Ash"
              className="circle"
              src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
              style={
                Object {
                  "height": undefined,
                  "maxHeight": undefined,
                  "maxWidth": undefined,
                  "minHeight": undefined,
                  "minWidth": undefined,
                  "objectFit": undefined,
                  "width": "1.5em",
                }
              } />
          </span>
          <span
            className="post-details-author-email">
            <span
              className="text small">
              ash@buffer.com
            </span>
          </span>
          <span
            className="post-source">
            <span
              className="text small">
              via web
            </span>
          </span>
          <span
            className="post-icon-last">
            <i
              className="icon small undefined bi bi-retweet" />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="button-panel">
    <button
      className="button fill-container"
      disabled={false}
      onClick={[Function]}>
      Request Approval
    </button>
  </div>
</div>
`;

exports[`Snapshots PostButtonPanel disabled 1`] = `
<div
  className="button-panel">
  <button
    className="button fill-container"
    disabled={true}
    onClick={[Function]}>
    Request Approval
  </button>
</div>
`;

exports[`Snapshots PostButtonPanel manager 1`] = `
<div
  className="button-panel">
  <button
    className="button fill-container"
    disabled={false}
    onClick={[Function]}>
    Approve
  </button>
</div>
`;

exports[`Snapshots PostButtonPanel manager, isWorking 1`] = `
<div
  className="button-panel">
  <button
    className="button fill-container"
    disabled={true}
    onClick={[Function]}>
    Approving ...
  </button>
</div>
`;

exports[`Snapshots PostButtonPanel member 1`] = `
<div
  className="button-panel">
  <button
    className="button fill-container"
    disabled={false}
    onClick={[Function]}>
    Request Approval
  </button>
</div>
`;

exports[`Snapshots PostButtonPanel member, isWorking 1`] = `
<div
  className="button-panel">
  <button
    className="button fill-container"
    disabled={true}
    onClick={[Function]}>
    Requesting Approval ...
  </button>
</div>
`;

exports[`Snapshots PostDetails default 1`] = `
<div
  className="post-details">
  <div
    className="post-controls">
    <div>
      <span>
        <span
          className="post-button">
          <button
            className="no-style"
            disabled={undefined}
            onClick={[Function]}>
            <span
              className={undefined}>
              <span
                className="post-icon">
                <i
                  className="icon small undefined bi bi-x" />
              </span>
              <span
                className="text small">
                Delete Post
              </span>
            </span>
          </button>
        </span>
      </span>
      <span
        className="post-button-last">
        <button
          className="no-style"
          disabled={undefined}
          onClick={[Function]}>
          <span
            className="post-icon">
            <i
              className="icon small undefined bi bi-edit" />
          </span>
          <span
            className="text small">
            Edit Post
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    className="post-author">
    <span
      className="post-details-author-image">
      <img
        alt="Ash"
        className="circle"
        src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
        style={
          Object {
            "height": undefined,
            "maxHeight": undefined,
            "maxWidth": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "objectFit": undefined,
            "width": "1.5em",
          }
        } />
    </span>
    <span
      className="post-details-author-email">
      <span
        className="text small">
        ash@buffer.com
      </span>
    </span>
    <span
      className="post-source">
      <span
        className="text small">
        via web
      </span>
    </span>
    <span
      className="post-icon-last">
      <i
        className="icon small undefined bi bi-image" />
    </span>
  </div>
</div>
`;

exports[`Snapshots PostDetails isConfirmingDelete 1`] = `
<div
  className="post-details">
  <div
    className="post-controls">
    <div>
      <span>
        <span
          className="post-button">
          <button
            className="no-style"
            disabled={undefined}
            onClick={[Function]}>
            <span
              className="post-confirming-delete">
              <span
                className="post-icon">
                <i
                  className="icon small undefined bi bi-x" />
              </span>
              <span
                className="text small">
                Confirm
              </span>
            </span>
          </button>
        </span>
        <span
          className="post-cancel-delete">
          <button
            className="no-style"
            disabled={undefined}
            onClick={[Function]}>
            <span
              className="text small">
              Cancel
            </span>
          </button>
        </span>
      </span>
      <span
        className="post-button-last">
        <button
          className="no-style"
          disabled={undefined}
          onClick={[Function]}>
          <span
            className="post-icon">
            <i
              className="icon small undefined bi bi-edit" />
          </span>
          <span
            className="text small">
            Edit Post
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    className="post-author">
    <span
      className="post-details-author-image">
      <img
        alt="Ash"
        className="circle"
        src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
        style={
          Object {
            "height": undefined,
            "maxHeight": undefined,
            "maxWidth": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "objectFit": undefined,
            "width": "1.5em",
          }
        } />
    </span>
    <span
      className="post-details-author-email">
      <span
        className="text small">
        ash@buffer.com
      </span>
    </span>
    <span
      className="post-source">
      <span
        className="text small">
        via web
      </span>
    </span>
    <span
      className="post-icon-last">
      <i
        className="icon small undefined bi bi-image" />
    </span>
  </div>
</div>
`;

exports[`Snapshots PostDetails isDeleting 1`] = `
<div
  className="post-details">
  <div
    className="post-controls">
    <span
      className="text small">
       Deleting... 
    </span>
  </div>
  <div
    className="post-author">
    <span
      className="post-details-author-image">
      <img
        alt="Ash"
        className="circle"
        src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
        style={
          Object {
            "height": undefined,
            "maxHeight": undefined,
            "maxWidth": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "objectFit": undefined,
            "width": "1.5em",
          }
        } />
    </span>
    <span
      className="post-details-author-email">
      <span
        className="text small">
        ash@buffer.com
      </span>
    </span>
    <span
      className="post-source">
      <span
        className="text small">
        via web
      </span>
    </span>
    <span
      className="post-icon-last">
      <i
        className="icon small undefined bi bi-image" />
    </span>
  </div>
</div>
`;

exports[`Snapshots PostDetails postType=link 1`] = `
<div
  className="post-details">
  <div
    className="post-controls">
    <div>
      <span>
        <span
          className="post-button">
          <button
            className="no-style"
            disabled={undefined}
            onClick={[Function]}>
            <span
              className={undefined}>
              <span
                className="post-icon">
                <i
                  className="icon small undefined bi bi-x" />
              </span>
              <span
                className="text small">
                Delete Post
              </span>
            </span>
          </button>
        </span>
      </span>
      <span
        className="post-button-last">
        <button
          className="no-style"
          disabled={undefined}
          onClick={[Function]}>
          <span
            className="post-icon">
            <i
              className="icon small undefined bi bi-edit" />
          </span>
          <span
            className="text small">
            Edit Post
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    className="post-author">
    <span
      className="post-details-author-image">
      <img
        alt="Ash"
        className="circle"
        src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
        style={
          Object {
            "height": undefined,
            "maxHeight": undefined,
            "maxWidth": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "objectFit": undefined,
            "width": "1.5em",
          }
        } />
    </span>
    <span
      className="post-details-author-email">
      <span
        className="text small">
        ash@buffer.com
      </span>
    </span>
    <span
      className="post-source">
      <span
        className="text small">
        via web
      </span>
    </span>
    <span
      className="post-icon-last">
      <i
        className="icon small undefined bi bi-link" />
    </span>
  </div>
</div>
`;

exports[`Snapshots PostDetails postType=retweet 1`] = `
<div
  className="post-details">
  <div
    className="post-controls">
    <div>
      <span>
        <span
          className="post-button">
          <button
            className="no-style"
            disabled={undefined}
            onClick={[Function]}>
            <span
              className={undefined}>
              <span
                className="post-icon">
                <i
                  className="icon small undefined bi bi-x" />
              </span>
              <span
                className="text small">
                Delete Post
              </span>
            </span>
          </button>
        </span>
      </span>
      <span
        className="post-button-last">
        <button
          className="no-style"
          disabled={undefined}
          onClick={[Function]}>
          <span
            className="post-icon">
            <i
              className="icon small undefined bi bi-edit" />
          </span>
          <span
            className="text small">
            Edit Post
          </span>
        </button>
      </span>
    </div>
  </div>
  <div
    className="post-author">
    <span
      className="post-details-author-image">
      <img
        alt="Ash"
        className="circle"
        src="https://buffer-uploads.s3.amazonaws.com/510521020a19000b6a00001e/a476fed03b1de4e06563d6063d7d3ee0.jpg"
        style={
          Object {
            "height": undefined,
            "maxHeight": undefined,
            "maxWidth": undefined,
            "minHeight": undefined,
            "minWidth": undefined,
            "objectFit": undefined,
            "width": "1.5em",
          }
        } />
    </span>
    <span
      className="post-details-author-email">
      <span
        className="text small">
        ash@buffer.com
      </span>
    </span>
    <span
      className="post-source">
      <span
        className="text small">
        via web
      </span>
    </span>
    <span
      className="post-icon-last">
      <i
        className="icon small undefined bi bi-retweet" />
    </span>
  </div>
</div>
`;

exports[`Snapshots RetweetPanel default 1`] = `
<div
  className="retweet-panel-container">
  <img
    alt="Image"
    className="circle"
    src="https://buffer-uploads.s3.amazonaws.com/503a5c8ffc99f72a7f00002e/f49c2ff693f1c307af5e1b3d84e581ca.png"
    style={
      Object {
        "height": "2em",
        "maxHeight": undefined,
        "maxWidth": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "objectFit": undefined,
        "width": "2em",
      }
    } />
  <div
    className="retweet-handle-container">
    <span
      className="text small">
      Joel Gascoigne
    </span>
    <span
      className="text extraSmall">
      @joelgascoigne
    </span>
  </div>
</div>
`;

exports[`Snapshots ScheduleTag Default 1`] = `
<span
  className="scheduleTag">
  <span
    className="text extraSmall thin white">
    08:52am (GMC)
  </span>
  <span
    className="arrow" />
</span>
`;
